--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -89,6 +89,11 @@
     border-color: transparent;
 }
 
+.margin_welocme{
+    margin-top: 5px;
+    margin-right: 20px;
+}
+ 
 .cta-book h2 {
     color: #e4dc00;
     font-size: 40px;
