--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -2,6 +2,45 @@
 
 .slick-slider{position:relative;display:block;box-sizing:border-box;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;-webkit-touch-callout:none;-khtml-user-select:none;-ms-touch-action:pan-y;touch-action:pan-y;-webkit-tap-highlight-color:transparent}.slick-list{position:relative;display:block;overflow:hidden;margin:0;padding:0}.slick-list:focus{outline:none}.slick-list.dragging{cursor:pointer;cursor:hand}.slick-slider .slick-track,.slick-slider .slick-list{-webkit-transform:translate3d(0,0,0);-moz-transform:translate3d(0,0,0);-ms-transform:translate3d(0,0,0);-o-transform:translate3d(0,0,0);transform:translate3d(0,0,0)}.slick-track{position:relative;top:0;left:0;display:block;margin-left:auto;margin-right:auto}.slick-track:before,.slick-track:after{display:table;content:''}.slick-track:after{clear:both}.slick-loading .slick-track{visibility:hidden}.slick-slide{display:none;float:left;height:100%;min-height:1px}[dir=rtl] .slick-slide{float:right}.slick-slide img{display:block}.slick-slide.slick-loading img{display:none}.slick-slide.dragging img{pointer-events:none}.slick-initialized .slick-slide{display:block}.slick-loading .slick-slide{visibility:hidden}.slick-vertical .slick-slide{display:block;height:auto;border:1px solid transparent}.slick-arrow.slick-hidden{display:none}
 
+.entry-meta{
+    display: none;
+}
+
+.entry-title{
+    margin-top: 40px;
+}
+
+.entry-footer{
+    display: none;
+}
+
+.widget-title{
+    margin-top: 30px !important;
+}
+
+.entry-title a{
+    color: #333;
+}
+
+.entry-title a:hover{
+    color: #666;
+    text-decoration: none;
+}
+
+.widget-title:first-child{
+    margin-top: 0;
+}
+
+#main-menu a {
+    text-transform: uppercase;
+}
+
+.form-control:focus {
+    outline: none !important;
+    border:1px solid #e4dc00;
+    box-shadow: 0 0 10px #e4dc00;
+}
+
 .bg-primary{
     background-color: #fff!important;
 }
@@ -20,6 +59,27 @@
 
 .heroImageHomepage{
     background: url(../../../themes/salesacademy/img/heroimage.jpg);
+    background-position-y: -350px;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.heroImageAbout{
+    background: url(../../../themes/salesacademy/img/aboutbg.jpg);
+    background-position-y: -350px;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.heroImageContact{
+    background: url(../../../themes/salesacademy/img/contactus.jpg);
+    background-position-y: -350px;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.heroImageTraining{
+    background: url(../../../themes/salesacademy/img/onlinecourse.jpg);
     background-position-y: -350px;
     background-size: cover;
     background-repeat: no-repeat;
@@ -82,6 +142,7 @@
 }
 
 .twoHalfsButtons{
+    color: #333;
     width: 100%;
     margin-top: 40px; 
     padding: 15px 0;
@@ -111,7 +172,7 @@
     height: 50px;
     background: rgba(255,255,255,.7);
     border: 0;
-    color: #fff;
+    color: #333;
     font-size: 20px;
     font-weight: 700;
     border-radius: 10px;
@@ -286,6 +347,143 @@
     color: #000;
 }
 
+.aboutHeading{
+    border-bottom: 2px solid #333;
+}
+
+.wrapcina{
+    background: transparent linear-gradient(90deg,#e4dc00 0,#ffffff 100%) 0 0 no-repeat padding-box;
+    font-weight: 600;
+    padding: 60px;
+    margin: auto;
+}
+
+.newContentLists i{
+    padding-right: 10px;
+    color: #e4dc00;
+}
+
+.newContentLists li{
+    font-weight: 600;
+    font-size: 18px;
+}
+
+.about .card{
+    border-color: #e4dc00;
+    border-radius: 20px;
+    min-height: 250px;
+}
+
+.newContentLists{
+    margin-top: 0;
+    margin-bottom: 1rem;
+    list-style: none;
+    margin-left: 0;
+    padding-left: 0;
+}
+
+.btnAboutFirst{
+    background: #e4dc00;
+    width: 100%;
+    border: 1px solid #e4dc00;
+    color: #333;
+    font-weight: 600;
+}
+
+.btnAboutFirst:hover{
+    background: #c7c000;
+    border: 1px solid #e4dc00;
+}
+
+.btnAboutSecond{
+    background: #333;
+    border: 1px solid #333;
+    color: #fff;
+    font-weight: 600;
+    margin-top: 10px;
+    width: 100%;
+}
+
+.btnAboutSecond:hover{
+    background: #666;
+    border: 1px solid #333;
+}
+
+.secondSectionAbout p{
+    padding-left: 45px;
+}
+
+.secondSectionAbout i{
+    color: #e4dc00;
+    margin: auto 0;
+    padding-right: 20px;
+    font-size: 22px;
+}
+
+.contactFormBTN{
+    background: #333;
+    border: 1px solid #333;
+    color: #fff;
+    font-weight: 600;
+}
+
+.contactFormBTN:hover{
+    background: #666;
+    border: 1px solid #333;
+    color: #fff;
+    font-weight: 600;
+}
+
+.readMoreBTNBlogHome{
+    background: #333;
+    border: 1px solid #333;
+    color: #fff;
+    font-weight: 600;
+}
+
+.readMoreBTNBlogHome:hover{
+    background: #666;
+    border: 1px solid #333;
+    color: #fff;
+    font-weight: 600;
+}
+
+.green .card-title {
+    color: #333;
+} 
+
+.card-title a {
+    text-decoration: none;
+    color: #333;
+}
+
+.readMoreBTNBlogHome a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.card-title a:hover{
+    text-decoration: none;
+    color: #666;
+}
+
+.readMoreBTNBlogHome a:hover {
+    text-decoration: none;
+    color: #f0f0f0;
+}
+
+.card-online .card-body{
+    min-height: 290px;
+}
+
+.blog .col-lg-4{
+    margin-top: 30px;
+}
+
+.onlineTraining .col-lg-6{
+    margin-top: 30px;
+}
+
 @media (max-width: 767px){
     .slick-next, .slick-prev{ 
         display: none !important;
@@ -298,7 +496,16 @@
         font-size: 38px;
     }
     .heroImageHomepage{
-        background-position: center;
+        background-position: center!important;
+    }
+    .heroImageAbout{
+        background-position: center!important;
+    }
+    .heroImageContact{
+        background-position: center!important;
+    }
+    .heroImageTraining{
+        background-position: center!important;
     }
     .text-padd {
         padding: 50px 0;
@@ -323,3 +530,4 @@
         margin-top: 30px;
     }
 }
+
