--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -12185,6 +12185,10 @@ figure.woocommerce-product-gallery__wrapper {
   margin-left: 0;
   padding-left: 0; }
 
+.buttonsAbout {
+  color: #333;
+  font-weight: 600; }
+
 .btnAboutFirst {
   background: #e4dc00;
   width: 100%;
