--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -382,6 +382,11 @@
     padding-left: 0;
 }
 
+.buttonsAbout{ 
+    color: #333;
+    font-weight: 600;
+}
+
 .btnAboutFirst{
     background: #e4dc00;
     width: 100%;
