--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -124,6 +124,7 @@
 .twoHalfImages h4{
     border-bottom: 5px solid #e4dc00;
     text-align: center;
+    font-size: 19px; 
 }
 
 .twoHalfsButtons:hover{
@@ -452,6 +453,19 @@
     color: #fff;
     font-weight: 600;
 }
+.btn-secondary{
+    background: #333;
+    border: 1px solid #333;
+    color: #fff;
+    font-weight: 600;
+}
+
+.btn-secondary:hover{
+    background: #666;
+    border: 1px solid #333;
+    color: #fff;
+    font-weight: 600;
+}
 
 .green .card-title {
     color: #333;
@@ -487,6 +501,14 @@
 
 .onlineTraining .col-lg-6{
     margin-top: 30px;
+}
+
+.imageLandingBg{
+    background: url(../../../themes/salesacademy/img/contact_landing_bg.jpg);
+    height: 100%;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 @media (max-width: 767px){
